2001-01-15  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/message.el (message-followup): Handle "Mail-Copies-To:"
	correctly.
	(message-get-reply-headers): Ditto.

2001-01-15  Keiichi Suzuki  <keiichi@nanap.org>

	* lisp/gnus-bbdb.el (gnus-bbdb/update-record): Save excursion
	while `bbdb-annotate-message-sender' is being done.

2001-01-14  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-art.el (gnus-treatment-function-alist): Use backquote.

2001-01-13  Kinji Itoh  <kinji-i@ma.neweb.ne.jp>

	* Makefile.in (install-package-lisp): Specify EMACS=$(XEMACS).

2001-01-12  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (T-gnus): Update to 6.14.6.
	(gnus-revision-number): Clear to 00.

	* Sync up with Gnus v5.8.8.

2001-01-11  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-msg.el (gnus-copy-article-buffer): Remove smiley
	extents for XEmacs 21.1 using `format'.

2001-01-10  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus.el: Don't autoload "smiley" for `smiley-toggle-buffer';
	don't autoload "gnus-bitmap" or "x-face-mule" when Emacs 21 is
	running.

	* lisp/gnus-art.el (TopLevel): Autoload "gnus-bitmap" for
	`smiley-toggle-buffer' when compiling.
	(gnus-treatment-function-alist): Use `gnus-smiley-display' for
	`gnus-treat-display-smileys' by default when XEmacs or Emacs 21 is
	running.
	(gnus-treat-display-smileys): Check for `smiley-mule' instead of
	`gnus-bitmap'.
	(gnus-article-x-face-command): Don't check for xbm for x-face-e21.

2000-12-22  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-msg.el (gnus-debug): Use `sit-for' in the inside of
	`save-excursion'.
	(gnus-bug): Pop up the sending buffer first.

	* lisp/dgnushack.el
	(byte-compile-file-form-custom-declare-variable): Use `defvar'
	instead of `custom-declare-variable' to make the variable
	uncustomizable if the arguments has the keyword `:version'.

2000-12-21  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/dgnushack.el (TopLevel): Byte-optimize
	`custom-declare-variable', `custom-declare-group, and